--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
 body{
-    font-family: 'Indie Flower', cursive; 
+    /* font-family: 'Indie Flower', cursive;  */
+    /* font-family: 'PT Sans', sans-serif; */
+    font-family: 'Open Sans Condensed', sans-serif;
+    margin-left: 20px;
 }
 
 a {
     text-decoration: none;
     color: black;
+}
+
+* {
+    box-sizing: border-box;
 }
