--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -19,6 +19,7 @@
         justify-content: flex-end;
         .option {
             padding: 10px 14px;
+            cursor: pointer;
         }
     }
 
