--- a/src/components/preview-collections/preview-collection-styles.scss
+++ b/src/components/preview-collections/preview-collection-styles.scss
@@ -6,7 +6,7 @@
     .title {
         font-size: 28px;
         margin-bottom: 25px;
-        border: 5px solid yellow;
+        // border: 5px solid yellow;
     }
 
     .preview {
