--- a/client/src/components/directory/directory.styles.scss
+++ b/client/src/components/directory/directory.styles.scss
@@ -1,6 +1,11 @@
 .directory-menu {
-    width: 100%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  @media screen and (max-width: 460px) {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-direction: column;
+  }
 }
