--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,15 +1,15 @@
-body{
-    /* font-family: 'Indie Flower', cursive;  */
-    /* font-family: 'PT Sans', sans-serif; */
-    font-family: 'Open Sans Condensed', sans-serif;
-    margin-left: 20px;
+body {
+  /* font-family: 'Indie Flower', cursive;  */
+  /* font-family: 'PT Sans', sans-serif; */
+  font-family: "Open Sans Condensed", sans-serif;
+  /* margin-left: 20px; */
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
